<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">アプリテスト dominit</string>
    <string name="title_main">ランダマイズ対象選択</string>
    <string name="title_randomized">ランダマイズ結果</string>
    <string name="activity_title_randomized">dominit: ランダマイズ結果</string>
    <string name="activity_title_settings">dominit: 設定</string>
    <string name="activity_title_twitter_oauth">dominit: Twitter認証</string>
    <string name="activity_title_tweet">dominit: ツイート</string>
    
    <string name="search">表示設定</string>
    <string name="randomize">ランダマイズ</string>
    <string name="search_condition">[現在の表示設定]</string>
    <string name="search_condition_all">全選択</string>
    <string name="search_condition_nothing">なし</string>
    <string name="action_tweet">ツイート...</string>
    <string name="tweet">ツイート</string>
    <string name="change">変更</string>
    <string name="all">All</string>
    
    <string name="card_cost">Cost</string>
    <string name="card_num">No.</string>
    <string name="card_name">カード名</string>
    <string name="card_expansion">拡張</string>
    
    <string name="share_cards_by_twitter">カードリストをツイッターで共有</string>
    
    <string name="change_visible_card_state">表示カード全てを…</string>
    <string name="random_visible_card_state">ランダム対象に入れる</string>
    <string name="delete_visible_card_state">ランダム対象から外す</string>
    <string name="force_visible_card_state">必ず入れる</string>
    <string name="delete_this_card">このカードを削除</string>
    <string name="rerandomize_this_card">このカードをランダマイズしなおす</string>
    
    <string name="action_settings">設定</string>
    <string name="settings">設定</string>
    <string name="config_twitter">Twitter設定...</string>
    <string name="config_twitter_unset">認証されていません</string>
    
    
    <string name="pin">PIN</string>
    <string name="prepare_auth">認証の準備をしています...</string>
    <string name="prepared_auth">ブラウザで認証画面を開く</string>
    <string name="auth">認証</string>
    <string name="delete">削除</string>

</resources>
