<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context="com.yfoggi.dominion.MainActivity" >
    
    <TextView
        android:id="@+id/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomized_activity_title" />

    <RelativeLayout 
        android:id="@+id/menu_relative"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/tweet_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/tweet" />
        
    </RelativeLayout>
    
	<View
		android:id="@+id/separator"
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="2dp"
		android:background="@color/separator" >
	</View>
    
		
	<LinearLayout
	    android:id="@+id/header_linear"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
			android:id="@+id/card_num_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_num"
			/>
		<TextView
			android:id="@+id/card_cost_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/card_cost"
			/>
		<TextView
			android:id="@+id/card_name_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:text="@string/card_name"
			/>
		<TextView
			android:id="@+id/card_expansion_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:text="@string/card_expansion"
			/>
		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="3"
			/>
	</LinearLayout>
   
	<View
		android:id="@+id/header_separator"
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="2dp"
		android:background="@color/week_separator" >
	</View>
    <ListView 
        android:id="@+id/card_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
