<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yfoggi.dominion.TweetActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    >
    
    <TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/auth"
        />
    
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:layout_gravity="center"
	    android:text="@string/auth"
	    android:orientation="horizontal"
        >
	    <Button
	        android:id="@+id/auth_browser_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/prepare_auth"
		    android:enabled="false"
	        />
    </LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="6"
		android:layout_gravity="center"
	    android:orientation="horizontal" 
		>
	    
	    <EditText 
	        android:id="@+id/pin_edit"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/pin"
	        android:inputType="number"
	        />
	    <Button 
	        android:id="@+id/auth_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/auth"
		    android:enabled="false"
	        />
	
	</LinearLayout>
    <TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/delete"
        />
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:layout_gravity="center"
	    android:text="@string/auth"
	    android:orientation="horizontal"
        >
	    <TextView
	        android:id="@+id/delete_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        />
	    <Button
	        android:id="@+id/delete_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/delete"
		    android:enabled="false"
	        />
    </LinearLayout>
</LinearLayout>